--- a/admin_dash.html
+++ b/admin_dash.html
@@ -11,7 +11,7 @@
 
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="admin_dash.css">
+    <link rel="stylesheet" href="po_dash.css">
   
 </head>
 
